--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,17 @@
 /frontend/node_modules
 /dist
 
-
-# local env files
+### local env files ###
 .env.local
 .env.*.local
 
-# Log files
+### Log files ###
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Editor directories and files
+### Editor directories and files ###
 .idea
 .vscode
 *.suo
@@ -21,3 +20,19 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### Kotlin ###
+.kotlin
