--- a/backend/csvgen/src/main/resources/application.yml
+++ b/backend/csvgen/src/main/resources/application.yml
@@ -12,9 +12,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update  # Automatically updates the database schema
-    show-sql: true  # Shows SQL queries in logs
-logging:
-  level:
-    org:
-      springframework:
-        web: DEBUG  # Logs HTTP requests for debugging (optional)
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        boot:
+          allow_jdbc_metadata_access: false
