restore correct port

--- a/backend/csvgen/src/main/resources/application.yml
+++ b/backend/csvgen/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   application:
     name: csvgen
+
   datasource:
     url: jdbc:postgresql://database:5432/mydb
     username: user
@@ -17,3 +18,5 @@ spring:
 
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
+server:
+  port: 8081
