--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/node": "^22.5.5",
+    "@vue/compat": "^3.5.6",
+    "@vue/runtime-dom": "^3.5.6",
+    "@vue/tsconfig": "^0.5.1",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
@@ -15,11 +19,16 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vitejs/plugin-vue": "^5.1.3",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.2",
+    "vue-loader": "^17.3.1"
   },
   "eslintConfig": {
     "root": true,
