--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: vue-app
     working_dir: /app
     volumes:
-      - ./frontend:/app
+      - ./frontend/csvgen:/app
     ports:
       - "8080:8080"
     command: >
